Bug 944947 - label truncation is not fully supported in Australis menu widgets, r=MattN

--- a/toolkit/themes/windows/global/toolbarbutton.css
+++ b/toolkit/themes/windows/global/toolbarbutton.css
@@ -31,6 +31,18 @@ toolbarbutton {
   text-align: center;
 }
 
+.toolbarbutton-multiline-text {
+  display: none;
+}
+
+toolbarbutton[wrap="true"] > .toolbarbutton-text {
+  display: none;
+}
+
+toolbarbutton[wrap="true"] > .toolbarbutton-multiline-text {
+  display: -moz-box;
+}
+
 toolbarbutton.tabbable {
   -moz-user-focus: normal !important;
 }
